--- a/index.html
+++ b/index.html
@@ -5,11 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>babygirl</title>
   <style>
+    * {
+      box-sizing: border-box;
+    }
     body {
       margin: 0;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      font-family: 'Segoe UI', sans-serif;
       background-color: #000;
-      color: white;
+      color: #fff;
       overflow: hidden;
     }
     .container {
@@ -24,44 +27,42 @@
     }
     .title {
       grid-area: title;
-      background: #4b0082;
+      background-color: #2e003e;
       display: flex;
-      align-items: center;
       justify-content: space-between;
+      align-items: center;
       padding: 0 20px;
-    }
-    .title h1 {
-      margin: 0;
-      font-size: 28px;
-      cursor: pointer;
       color: white;
     }
-    .score {
-      background: #222;
-      padding: 8px 12px;
+    .title h1 {
+      font-size: 28px;
+      cursor: pointer;
+    }
+    .score-box {
+      background: #111;
+      padding: 6px 12px;
       border-radius: 8px;
     }
     .sidebar {
       grid-area: sidebar;
-      background: #111;
+      background-color: #1a001f;
+      padding: 20px 10px;
       display: flex;
       flex-direction: column;
-      padding-top: 20px;
-      gap: 15px;
+      gap: 10px;
     }
     .sidebar button {
-      background: #6a0dad;
+      background-color: #6a0dad;
       color: white;
-      border: none;
       padding: 10px;
-      margin: 0 10px;
-      border-radius: 8px;
+      border: none;
+      border-radius: 6px;
+      transition: 0.2s;
       cursor: pointer;
-      transition: all 0.2s;
     }
     .sidebar button:hover {
       transform: scale(1.05);
-      background: #8a2be2;
+      background-color: #8a2be2;
     }
     .main {
       grid-area: main;
@@ -70,74 +71,70 @@
     }
     .footer {
       grid-area: footer;
-      background: #222;
+      background-color: #111;
+      padding: 10px;
       display: flex;
       align-items: center;
-      justify-content: space-between;
-      padding: 0 20px;
+      gap: 10px;
     }
     .footer button {
-      background: #6a0dad;
+      background-color: #6a0dad;
       color: white;
       border: none;
-      padding: 10px 15px;
-      border-radius: 8px;
+      padding: 10px 20px;
+      border-radius: 6px;
       cursor: pointer;
-      transition: all 0.2s;
+      transition: 0.2s;
     }
     .footer button:hover {
+      background-color: #8a2be2;
       transform: scale(1.05);
-      background: #8a2be2;
     }
     .footer .wide {
       flex-grow: 1;
-      margin-left: 10px;
     }
-    .output {
+    .tab-item {
+      background-color: #1c1c1c;
+      border-radius: 8px;
+      padding: 12px;
+      margin: 8px 0;
+      cursor: pointer;
+      transition: 0.2s;
+    }
+    .tab-item:hover {
+      transform: scale(1.02);
+      background-color: #292929;
+    }
+    .output-float {
       position: fixed;
       bottom: 10px;
       right: 10px;
-      background: #8a2be2;
+      background-color: #8a2be2;
       color: white;
-      padding: 10px;
-      border-radius: 10px;
-      opacity: 0.9;
+      padding: 12px 16px;
+      border-radius: 8px;
       animation: fadeOut 5s forwards;
     }
     @keyframes fadeOut {
-      0% { opacity: 0.9; }
-      100% { opacity: 0; display: none; }
+      0% {opacity: 0.9;}
+      80% {opacity: 0.5;}
+      100% {opacity: 0; display: none;}
     }
-    .tab-panel {
-      background: #1a1a1a;
-      border-radius: 10px;
-      padding: 15px;
-      margin: 10px 0;
-      cursor: pointer;
-      transition: all 0.2s;
-    }
-    .tab-panel:hover {
-      transform: scale(1.02);
-      background: #2b2b2b;
-    }
-    .hidden { display: none; }
     .chatbox {
+      background: #2b2b2b;
+      padding: 10px;
+      border-radius: 8px;
       max-height: 200px;
       overflow-y: auto;
-      background: #333;
-      padding: 10px;
-      border-radius: 10px;
+      color: white;
     }
-    .chatbox p {
-      margin: 4px 0;
-    }
+    .hidden { display: none; }
     table {
       width: 100%;
       border-collapse: collapse;
-      color: white;
     }
     th, td {
-      border: 1px solid #555;
+      border: 1px solid #444;
       padding: 8px;
       text-align: left;
     }
@@ -150,104 +147,105 @@
   <div class="container">
     <div class="title">
       <h1 onclick="showIntro()">babygirl</h1>
-      <div class="score">Avg. Score: <span id="avgScore">--</span></div>
+      <div class="score-box">Avg. Score: <span id="avgScore">--</span></div>
     </div>
     <div class="sidebar">
-      <button onclick="showTab('pending')">Pending Tasks</button>
-      <button onclick="showTab('mind')">What's on Your Mind</button>
-      <button onclick="showTab('drive')">Drive</button>
-      <button onclick="showTab('active')">Active Tasks</button>
-      <button onclick="showTab('scoring')">Scoring</button>
+      <button onclick="loadTab('pending')">Pending Tasks</button>
+      <button onclick="loadTab('mind')">What's on Your Mind</button>
+      <button onclick="loadTab('drive')">Drive</button>
+      <button onclick="loadTab('active')">Active Tasks</button>
+      <button onclick="loadTab('scoring')">Scoring</button>
     </div>
     <div class="main" id="main">
-      <div id="intro">Welcome, babygirl. This is your dashboard. Awaiting your input...</div>
+      <div id="intro">Welcome, babygirl. Your instructions will appear here.</div>
     </div>
     <div class="footer">
       <button onclick="toggleChat()">Chatbox</button>
-      <button onclick="uploadTask()">Upload</button>
-      <button class="wide" onclick="addWeeklyTask()">Weekly Passive Tasks</button>
+      <button onclick="uploadFiles()">Upload</button>
+      <button class="wide" onclick="outputFloating('Weekly passive task added')">Weekly Passive Task</button>
     </div>
   </div>
-  <div id="chat" class="chatbox hidden"></div>
+  <div class="chatbox hidden" id="chatBox">
+    <p><strong>You:</strong> Placeholder text message.</p>
+  </div>
+
   <script>
     const main = document.getElementById('main');
     let activeTasks = [];
-    let scores = [];
+    let scoredTasks = [];
 
     function showIntro() {
-      main.innerHTML = '<div id="intro">Welcome, babygirl. This is your dashboard. Awaiting your input...</div>';
+      main.innerHTML = '<div id="intro">Welcome, babygirl. Your instructions will appear here.</div>';
     }
 
-    function outputMessage(msg) {
-      const msgBox = document.createElement('div');
-      msgBox.className = 'output';
-      msgBox.innerText = msg;
-      document.body.appendChild(msgBox);
-      setTimeout(() => msgBox.remove(), 5000);
+    function outputFloating(msg) {
+      const float = document.createElement('div');
+      float.className = 'output-float';
+      float.innerText = msg;
+      document.body.appendChild(float);
+      setTimeout(() => float.remove(), 5000);
     }
 
-    function showTab(tab) {
+    function loadTab(tab) {
       if (tab === 'pending') {
         main.innerHTML = '<h2>Pending Tasks</h2>' +
-          [...Array(3).keys()].map(i => `<div class="tab-panel" onclick="addToActive('Pending Task ${i+1}')">Pending Task ${i+1}</div>`).join('');
+          [...Array(3)].map((_, i) => `<div class='tab-item' onclick='addTask("Pending Task ${i+1}")'>Pending Task ${i+1}</div>`).join('');
       } else if (tab === 'mind') {
-        main.innerHTML = '<h2>What's on Your Mind</h2>' +
-          [...Array(4).keys()].map(i => `<div class="tab-panel" onclick="addToActive('Mind Choice ${i+1}')">Mind Choice ${i+1}</div>`).join('');
+        main.innerHTML = '<h2>What\'s on Your Mind</h2>' +
+          [...Array(4)].map((_, i) => `<div class='tab-item' onclick='addTask("Mind Choice ${i+1}")'>Mind Choice ${i+1}</div>`).join('');
       } else if (tab === 'drive') {
-        let content = '';
-        for (let i = 1; i <= 3; i++) {
-          content += `<div class="tab-panel" onclick="cascadeDrive(${i}, '')">Drive Level 1 - ${i}</div>`;
-        }
-        main.innerHTML = '<h2>Drive</h2>' + content;
+        renderDrive(1, '');
       } else if (tab === 'active') {
-        main.innerHTML = '<h2>Active Tasks</h2>' +
-          activeTasks.map((t, i) => `<div>${t} <button onclick="markDone(${i})">Done</button></div>`).join('');
+        renderActiveTasks();
       } else if (tab === 'scoring') {
-        main.innerHTML = '<h2>Scoring</h2><table><tr><th>Task</th><th>Score</th></tr>' +
-          scores.map((s, i) => `<tr><td>${s.task}</td><td><input type='number' min='0' max='100' onchange='updateScore(${i}, this.value)' /></td></tr>`).join('') + '</table>';
+        renderScoring();
       }
     }
 
-    function addToActive(text) {
-      outputMessage(text);
+    function addTask(task) {
+      outputFloating(task);
       if (activeTasks.length >= 5) activeTasks.shift();
-      activeTasks.push(text);
+      activeTasks.push(task);
+    }
+
+    function renderDrive(level, path) {
+      if (level > 3) {
+        addTask(`Drive: ${path}`);
+        return;
+      }
+      main.innerHTML = `<h2>Drive Level ${level}</h2>` +
+        [...Array(3)].map((_, i) => `<div class='tab-item' onclick='renderDrive(${level+1}, "${path} > Choice ${level}.${i+1}")'>Choice ${level}.${i+1}</div>`).join('');
+    }
+
+    function renderActiveTasks() {
+      main.innerHTML = '<h2>Active Tasks</h2>' +
+        activeTasks.map((t, i) => `<div>${t} <button onclick='markDone(${i})'>Done</button></div>`).join('');
     }
 
     function markDone(index) {
       const task = activeTasks[index];
       activeTasks.splice(index, 1);
-      scores.push({ task, score: 0 });
-      showTab('active');
+      scoredTasks.push({ task, score: 0 });
+      renderActiveTasks();
     }
 
-    function updateScore(index, val) {
-      scores[index].score = Number(val);
-      const avg = scores.reduce((a, b) => a + b.score, 0) / scores.length;
-      document.getElementById('avgScore').innerText = avg.toFixed(2);
+    function renderScoring() {
+      main.innerHTML = '<h2>Scoring</h2><table><tr><th>Task</th><th>Score</th></tr>' +
+        scoredTasks.map((t, i) => `<tr><td>${t.task}</td><td><input type='number' min='0' max='100' onchange='updateScore(${i}, this.value)' /></td></tr>`).join('') + '</table>';
     }
 
-    function cascadeDrive(level, path) {
-      if (level === 4) {
-        addToActive(`Drive Path: ${path}`);
-        return;
-      }
-      main.innerHTML = `<h2>Drive Level ${level}</h2>` +
-        [...Array(3).keys()].map(i => `<div class="tab-panel" onclick="cascadeDrive(${level+1}, '${path} ${level}.${i+1}')">Choice ${level}.${i+1}</div>`).join('');
+    function updateScore(index, value) {
+      scoredTasks[index].score = parseInt(value);
+      const avg = scoredTasks.reduce((sum, t) => sum + t.score, 0) / scoredTasks.length;
+      document.getElementById('avgScore').innerText = isNaN(avg) ? '--' : avg.toFixed(2);
     }
 
     function toggleChat() {
-      const chat = document.getElementById('chat');
-      chat.classList.toggle('hidden');
-      chat.innerHTML += '<p><b>You:</b> [edit this message]</p>';
+      document.getElementById('chatBox').classList.toggle('hidden');
     }
 
-    function uploadTask() {
-      outputMessage("Upload button clicked. [connect upload logic]");
-    }
-
-    function addWeeklyTask() {
-      outputMessage("Weekly passive task triggered.");
+    function uploadFiles() {
+      outputFloating("Upload triggered [integrate file input logic here]");
     }
   </script>
 </body>
