--- a/index.html
+++ b/index.html
@@ -594,16 +594,16 @@
                 <span class="tab-text">Pending Tasklist</span>
             </div>
             <div class="tab" data-tab="mind">
-                <span class="tab-text">What's on your mind</span>
+                <span class="tab-text">What would you like to do for me today?</span>
             </div>
             <div class="tab" data-tab="drive">
-                <span class="tab-text">Drive</span>
+                <span class="tab-text">Would you like to drive a little while?</span>
             </div>
             <div class="tab" data-tab="active">
-                <span class="tab-text">Active Tasklist</span>
+                <span class="tab-text">All your active tasks</span>
             </div>
             <div class="tab" data-tab="scoring">
-                <span class="tab-text">Scoring</span>
+                <span class="tab-text">Marking</span>
             </div>
         </nav>
 
@@ -635,7 +635,7 @@
     <!-- Chatbox -->
     <div class="chatbox" id="chatbox">
         <div class="chat-header">
-            <span>💬 Chat with Dom</span>
+            <span>💬 Hi, darling. Tell me what's up.</span>
             <button class="chat-close" id="chatClose">×</button>
         </div>
         <div class="chat-messages" id="chatMessages">
