--- a/index.html
+++ b/index.html
@@ -639,7 +639,7 @@
             <button class="chat-close" id="chatClose">×</button>
         </div>
         <div class="chat-messages" id="chatMessages">
-            <div class="chat-message dom">Welcome, babygirl. How are you feeling today?</div>
+            <div class="chat-message dom">Welcome, my dearest. How are you feeling today?</div>
         </div>
         <div class="chat-input-container">
             <input type="text" class="chat-input" id="chatInput" placeholder="Type your message...">
@@ -649,10 +649,10 @@
 
     <!-- Upload Window -->
     <div class="upload-window" id="uploadWindow">
-        <div class="upload-header">📤 Upload Task Proof</div>
+        <div class="upload-header">📤 Submit proof of your submission here</div>
         <div class="upload-area" id="uploadArea">
             <p>📷 Drop files here or click to select</p>
-            <p style="font-size: 0.9rem; opacity: 0.7; margin-top: 10px;">Photos and videos accepted</p>
+            <p style="font-size: 0.9rem; opacity: 0.7; margin-top: 10px;">Photos and videos accepted;)</p>
         </div>
         <input type="file" class="upload-file-input" id="uploadFileInput" accept="image/*,video/*" multiple>
         <button class="upload-submit" id="uploadSubmit">Upload Files</button>
@@ -666,7 +666,7 @@
             scoringData: [],
             driveNavigation: [],
             chatMessages: [
-                { type: 'dom', text: 'Welcome, babygirl. How are you feeling today?' }
+                { type: 'dom', text: 'Welcome, my dearest. How are you feeling today?' }
             ]
         };
 
