--- a/index.html
+++ b/index.html
@@ -591,7 +591,7 @@
         <!-- Sidebar -->
         <nav class="sidebar">
             <div class="tab active" data-tab="intro">
-                <span class="tab-text">Pending Tasklist</span>
+                <span class="tab-text">General Instructions for you</span>
             </div>
             <div class="tab" data-tab="mind">
                 <span class="tab-text">What would you like to do for me today?</span>
@@ -683,7 +683,7 @@
             "I think I can work in an interview today. 😋",
             "Maybe I can take you along for a trip to the shower? 🚿", 
             "I'd love a little one-on-one video call, maybe. 💞",
-            " Can you just teach me how to dirty-talk well with you? 😙"
+            "Can you just teach me how to dirty-talk well with you? 😙"
         ];
 
         const driveOptions = {
