--- a/index.html
+++ b/index.html
@@ -635,7 +635,7 @@
     <!-- Chatbox -->
     <div class="chatbox" id="chatbox">
         <div class="chat-header">
-            <span>💬 Hi, darling. Tell me what's up.</span>
+            <span>💬 Talk to me here.</span>
             <button class="chat-close" id="chatClose">×</button>
         </div>
         <div class="chat-messages" id="chatMessages">
@@ -649,7 +649,7 @@
 
     <!-- Upload Window -->
     <div class="upload-window" id="uploadWindow">
-        <div class="upload-header">📤 Submit proof of your submission here</div>
+        <div class="upload-header">📤 Submit proof of your submission here.</div>
         <div class="upload-area" id="uploadArea">
             <p>📷 Drop files here or click to select</p>
             <p style="font-size: 0.9rem; opacity: 0.7; margin-top: 10px;">Photos and videos accepted;)</p>
@@ -759,11 +759,7 @@
         };
 
         const weeklyTasks = [
-            "Weekly reflection and goal setting",
-            "Deep cleaning and organization",
-            "Meal planning and preparation",
-            "Self-care routine assessment",
-            "Relationship check-in discussion"
+            "As underwear, you are allowed to wear only bras on Monday, Wednesday, Thursday, and Saturday, and only panties every other day. Don't let me down. 😘"
         ];
 
         // Utility Functions
