--- a/index.html
+++ b/index.html
@@ -591,13 +591,13 @@
         <!-- Sidebar -->
         <nav class="sidebar">
             <div class="tab active" data-tab="intro">
-                <span class="tab-text">General Instructions for you</span>
+                <span class="tab-text">General Instructions</span>
             </div>
             <div class="tab" data-tab="mind">
                 <span class="tab-text">What would you like to do for me today?</span>
             </div>
             <div class="tab" data-tab="drive">
-                <span class="tab-text">Would you like to drive a little while?</span>
+                <span class="tab-text">Would you like to drive for a little while?</span>
             </div>
             <div class="tab" data-tab="active">
                 <span class="tab-text">All your active tasks</span>
