--- a/index.html
+++ b/index.html
@@ -688,30 +688,30 @@
 
         const driveOptions = {
             level1: [
-                "Physical Tasks",
-                "Mental Challenges",
-                "Creative Expression"
+                "I don't think I can do much, but I'd happily take on any passive tasks you have for me.",
+                "Maybe I can do something for you in a video?",
+                "I'd love to simply send you a hot little picture, no boundaries at all."
             ],
             level2: {
-                "Physical Tasks": [
-                    "Exercise Routine",
-                    "Appearance Tasks", 
+                "I don't think I can do much, but I'd happily take on any passive tasks you have for me.": [
+                    "I'd love to wear (or not wear) something, or anything, you want.",
+                    "I think I'll explore some other passive task to please you.", 
                     "Discipline Training"
                 ],
-                "Mental Challenges": [
+                "Maybe I can do something for you in a video?": [
                     "Learning Goals",
                     "Meditation Practice",
                     "Problem Solving"
                 ],
-                "Creative Expression": [
+                "I'd love to simply send you a hot little picture, no boundaries at all.": [
                     "Art Projects",
                     "Writing Tasks",
                     "Performance"
                 ]
             },
             level3: {
-                "Exercise Routine": [
-                    "30-minute cardio session",
+                "I'd love to wear (or not wear) something, or anything, you want.": [
+                    "I will skip on wearing panties for a week. You can check in on me any time I am free.",
                     "Strength training routine", 
                     "Flexibility and stretching"
                 ],
