--- a/index.html
+++ b/index.html
@@ -597,7 +597,7 @@
                 <span class="tab-text">What would you like to do for me today?</span>
             </div>
             <div class="tab" data-tab="drive">
-                <span class="tab-text">Would you like to drive for a little while?</span>
+                <span class="tab-text">Would you like to drive fora little while?</span>
             </div>
             <div class="tab" data-tab="active">
                 <span class="tab-text">All your active tasks</span>
@@ -689,28 +689,28 @@
         const driveOptions = {
             level1: [
                 "I don't think I can do much, but I'd happily take on any passive tasks you have for me.",
-                "Maybe I can do something for you in a video?",
-                "I'd love to simply send you a hot little picture, no boundaries at all."
+                "Mental Challenges",
+                "Creative Expression"
             ],
             level2: {
-                "I don't think I can do much, but I'd happily take on any passive tasks you have for me.": [
+                "Physical Tasks": [
                     "I'd love to wear (or not wear) something, or anything, you want.",
-                    "I think I'll explore some other passive task to please you.", 
+                    "Appearance Tasks", 
                     "Discipline Training"
                 ],
-                "Maybe I can do something for you in a video?": [
+                "Mental Challenges": [
                     "Learning Goals",
                     "Meditation Practice",
                     "Problem Solving"
                 ],
-                "I'd love to simply send you a hot little picture, no boundaries at all.": [
+                "Creative Expression": [
                     "Art Projects",
                     "Writing Tasks",
                     "Performance"
                 ]
             },
             level3: {
-                "I'd love to wear (or not wear) something, or anything, you want.": [
+                "Exercise Routine": [
                     "I will skip on wearing panties for a week. You can check in on me any time I am free.",
                     "Strength training routine", 
                     "Flexibility and stretching"
