--- a/index.html
+++ b/index.html
@@ -688,13 +688,13 @@
 
         const driveOptions = {
             level1: [
-                "I don't think I can do much, but I'd happily take on any passive tasks you have for me.",
+                "Physical Tasks",
                 "Mental Challenges",
                 "Creative Expression"
             ],
             level2: {
                 "Physical Tasks": [
-                    "I'd love to wear (or not wear) something, or anything, you want.",
+                    "Exercise Routine",
                     "Appearance Tasks", 
                     "Discipline Training"
                 ],
@@ -711,7 +711,7 @@
             },
             level3: {
                 "Exercise Routine": [
-                    "I will skip on wearing panties for a week. You can check in on me any time I am free.",
+                    "30-minute cardio session",
                     "Strength training routine", 
                     "Flexibility and stretching"
                 ],
