--- a/index.html
+++ b/index.html
@@ -724,13 +724,13 @@
         // Drive System - 3x3x3 cascading options - Edit these as needed
         const DRIVE_OPTIONS = {
             level1: [
-                "Physical Tasks",
+                "I don't think I can do much, but I'd happily take on any passive tasks you have for me.",
                 "Mental Challenges", 
                 "Creative Expression"
             ],
             level2: {
-                "Physical Tasks": [
-                    "Exercise & Fitness",
+                "I don't think I can do much, but I'd happily take on any passive tasks you have for me.": [
+                    "I'd love to wear (or not wear) something, or anything, you want.",
                     "Appearance & Grooming",
                     "Discipline & Training"
                 ],
@@ -746,8 +746,8 @@
                 ]
             },
             level3: {
-                "Exercise & Fitness": [
-                    "30-minute cardio session with heart rate monitoring",
+                "I'd love to wear (or not wear) something, or anything, you want.": [
+                    "I will skip on wearing panties for a week. You can check in on me any time I am free.",
                     "Strength training routine focusing on core and posture", 
                     "Flexibility and stretching routine with photos"
                 ],
