--- a/index.html
+++ b/index.html
@@ -724,13 +724,13 @@
         // Drive System - 3x3x3 cascading options - Edit these as needed
         const DRIVE_OPTIONS = {
             level1: [
-                "I don't think I can do much, but I'd happily take on any passive tasks you have for me.",
+                "Passive Tasks?",
                 "Mental Challenges", 
                 "Creative Expression"
             ],
             level2: {
-                "I don't think I can do much, but I'd happily take on any passive tasks you have for me.": [
-                    "I'd love to wear (or not wear) something, or anything, you want.",
+                "Passive Tasks?": [
+                    "Clothing-related",
                     "Appearance & Grooming",
                     "Discipline & Training"
                 ],
@@ -746,7 +746,7 @@
                 ]
             },
             level3: {
-                "I'd love to wear (or not wear) something, or anything, you want.": [
+                "Clothing-related": [
                     "I will skip on wearing panties for a week. You can check in on me any time I am free.",
                     "Strength training routine focusing on core and posture", 
                     "Flexibility and stretching routine with photos"
