--- a/index.html
+++ b/index.html
@@ -796,14 +796,7 @@
 
         // Weekly Tasks - Edit these as needed
         const WEEKLY_TASKS = [
-            "Weekly reflection and goal setting for personal development",
-            "Deep cleaning and organization of living space with photos",
-            "Meal planning and preparation for the upcoming week",
-            "Self-care routine assessment and improvement planning",
-            "Relationship check-in discussion with detailed feedback",
-            "Fitness progress evaluation and routine adjustment",
-            "Creative project completion with artistic expression",
-            "Educational goal review and learning plan update"
+            "As underwear, you are allowed to wear only bras on Monday, Wednesday, Thursday, and Saturday, and only panties every other day. Don't let me down. 😘"
         ];
 
         // Chat Responses for Dom - Edit these as needed
