--- a/index.html
+++ b/index.html
@@ -748,12 +748,12 @@
             level3: {
                 "Clothing-related": [
                     "I will skip on wearing panties for a week. You can check in on me any time I am free.",
-                    "Strength training routine focusing on core and posture", 
+                    "I know I look hot in my pink and nude bras. I'll wear only these for the next two days: you can check in any time I am free", 
                     "Flexibility and stretching routine with photos"
                 ],
                 "Appearance & Grooming": [
-                    "Perfect makeup application following tutorial",
-                    "Hair styling practice with before/after photos",
+                    "I'll voluntarily learn how to dirty-talk with you throughout the week, right here on this webpage.",
+                    "I'll send you a voice note affirming my submission to you, every night of this week, along with my good night text.",
                     "Outfit coordination and modeling session"
                 ],
                 "Discipline & Training": [
