--- a/index.html
+++ b/index.html
@@ -725,19 +725,19 @@
         const DRIVE_OPTIONS = {
             level1: [
                 "Passive Tasks?",
-                "Mental Challenges", 
+                "A sexy video?", 
                 "Creative Expression"
             ],
             level2: {
                 "Passive Tasks?": [
                     "Clothing-related",
-                    "Appearance & Grooming",
-                    "Discipline & Training"
+                    "Mind-related",
+                    "Other Passive Tasks"
                 ],
-                "Mental Challenges": [
-                    "Learning & Education",
-                    "Meditation & Mindfulness",
-                    "Problem Solving"
+                "A sexy video?": [
+                    "Starting Clothed",
+                    "Starting Nude",
+                    "Special Submission"
                 ],
                 "Creative Expression": [
                     "Art & Crafts",
@@ -749,29 +749,29 @@
                 "Clothing-related": [
                     "I will skip on wearing panties for a week. You can check in on me any time I am free.",
                     "I know I look hot in my pink and nude bras. I'll wear only these for the next two days: you can check in any time I am free", 
-                    "Flexibility and stretching routine with photos"
+                    "I will inform you at least two days this week that I am wearing my black vest with no bra underneath, and you can decide what you want to do with me then."
                 ],
-                "Appearance & Grooming": [
-                    "I'll voluntarily learn how to dirty-talk with you throughout the week, right here on this webpage.",
+                "Mind-related": [
+                    "A healthy body begets a healthy mind. I will do ten push-ups with you on a video call at least three times this week.",
+                    "I know I look hot with my hair down. I will send you at least three separate videos throughout the week showing you that I am studying with my hair down.",
+                    "Every night this week before going to bed, I am going to tell you what I like most about myself, and I would love it if you praised me for it too."
+                ],
+                "Other Passive Tasks": [
+                    "I'll voluntarily learn how to truly talk like a submissive with you at least once every day this week, right here on this webpage.",
                     "I'll send you a voice note affirming my submission to you, every night of this week, along with my good night text.",
-                    "Outfit coordination and modeling session"
+                    "I'll write anything, anywhere, on my body to confirm my willingness to obey you, and show you suitable proof of it, thrice this week."
                 ],
-                "Discipline & Training": [
-                    "Posture maintenance throughout the day with checks",
-                    "Voice modulation and speech practice exercises",
-                    "Etiquette and mannerisms training session"
+                "Starting Clothed": [
+                    "I will start out standing, wearing only a vest and panties, and then lower my panties to my thighs to present my pussy to you, all the while smiling at you.",
+                    "I will start out standing, wearing only a vest and panties, and then lower my vest to my stomach to present my breasts to you, all the while smiling at you",
+                    "I'll begin wearing a towel covering my breasts and pussy and my hair tied up: I will first lower the towel to release my breasts, smile at you, and then let my hair down."
                 ],
-                "Learning & Education": [
-                    "Read assigned chapter and provide detailed summary",
-                    "Study new language for 45 minutes with progress notes",
-                    "Research topic of interest and create presentation"
+                "Starting Nude": [
+                    "Please let me be naked on video for you, standing upright and saying how much I love being your good girl, and then turning around to present my ass to you",
+                    "I would think nothing of playing with my boobs for you, while kneeling. I love to be your good girl!",
+                    "I would love to role-play an Instagram vlogger and give you a nice introduction to all the various spots of interest on my body, and hope to draw your attention to each."
                 ],
-                "Meditation & Mindfulness": [
-                    "Guided meditation session with reflection journal",
-                    "Breathing exercises with mindfulness recording",
-                    "Visualization techniques practice with description"
-                ],
-                "Problem Solving": [
+                "Special Submission": [
                     "Complete logic puzzle and explain solution process",
                     "Strategic planning task with detailed outcome",
                     "Creative problem analysis with multiple solutions"
