--- a/index.html
+++ b/index.html
@@ -726,7 +726,7 @@
             level1: [
                 "Passive Tasks?",
                 "A sexy video?", 
-                "Creative Expression"
+                "A hot picture?"
             ],
             level2: {
                 "Passive Tasks?": [
@@ -739,7 +739,7 @@
                     "Starting Nude",
                     "Special Submission"
                 ],
-                "Creative Expression": [
+                "A hot picture?": [
                     "Art & Crafts",
                     "Writing & Journaling",
                     "Performance & Entertainment"
@@ -763,18 +763,18 @@
                 ],
                 "Starting Clothed": [
                     "I will start out standing, wearing only a vest and panties, and then lower my panties to my thighs to present my pussy to you, all the while smiling at you.",
-                    "I will start out standing, wearing only a vest and panties, and then lower my vest to my stomach to present my breasts to you, all the while smiling at you",
+                    "I will start out standing, wearing only a vest and panties, and then lower my vest to my stomach to present my breasts to you, all the while smiling at you.",
                     "I'll begin wearing a towel covering my breasts and pussy and my hair tied up: I will first lower the towel to release my breasts, smile at you, and then let my hair down."
                 ],
                 "Starting Nude": [
-                    "Please let me be naked on video for you, standing upright and saying how much I love being your good girl, and then turning around to present my ass to you",
+                    "Please let me be naked on video for you, standing upright and saying how much I love being your good girl, and then turning around to present my ass to you.",
                     "I would think nothing of playing with my boobs for you, while kneeling. I love to be your good girl!",
                     "I would love to role-play an Instagram vlogger and give you a nice introduction to all the various spots of interest on my body, and hope to draw your attention to each."
                 ],
                 "Special Submission": [
-                    "Complete logic puzzle and explain solution process",
-                    "Strategic planning task with detailed outcome",
-                    "Creative problem analysis with multiple solutions"
+                    "I will get topless for you, and send you a top-half-only video of me putting on eyeliner, because I know it makes me look prettier still, and you love it so.",
+                    "I'll start out in my black bra and dark panties, my hair tied up. I will begin by turning around, letting my hair and panties down, and taking my bra off. I'll turn back around after five seconds, and push my hair to my front, hands clasped in front in submission. ",
+                    "I'll start out naked, pull up a chair and sit in it, and then wear my pendant in fron of you. I'll stand back up and then give you a little twirl so you can appreciat every inch of me."
                 ],
                 "Art & Crafts": [
                     "Sketch daily subject with artistic interpretation",
