--- a/index.html
+++ b/index.html
@@ -740,8 +740,8 @@
                     "Special Submission"
                 ],
                 "A hot picture?": [
-                    "Art & Crafts",
-                    "Writing & Journaling",
+                    "Object-interaction",
+                    "Accessories",
                     "Performance & Entertainment"
                 ]
             },
@@ -776,14 +776,14 @@
                     "I'll start out in my black bra and dark panties, my hair tied up. I will begin by turning around, letting my hair and panties down, and taking my bra off. I'll turn back around after five seconds, and push my hair to my front, hands clasped in front in submission. ",
                     "I'll start out naked, pull up a chair and sit in it, and then wear my pendant in fron of you. I'll stand back up and then give you a little twirl so you can appreciat every inch of me."
                 ],
-                "Art & Crafts": [
-                    "Sketch daily subject with artistic interpretation",
-                    "Digital art creation following specific theme",
+                "Object-interaction": [
+                    "I'll strip down completely, and take a pic of me sitting in a chair and smiling in a mirror selfie, hair down, with an arm loosely held behind me, my legs wide apart for you to savour what's in between.",
+                    "Since you love teaching me, maybe I can take a mirror selfie with a book held up to my face, my hair down, wearing nothing but panties, and every other inch of me on display for you",
                     "Handmade craft project with step-by-step documentation"
                 ],
-                "Writing & Journaling": [
-                    "Reflective journal entry about personal growth",
-                    "Creative story writing with character development",
+                "Accessories": [
+                    "I'd love to send you an upper-half profile topless picture of me without my glasses, hair tied up tight, wearing eyeliner and basic makeup. I love being pretty for you!",
+                    "A simple nude front profile mirror selfie, standing with a foot planted in front of the other, one hand loosely covering my pussy, wearing nothing but my college ID card. ",
                     "Letter of appreciation and gratitude expression"
                 ],
                 "Performance & Entertainment": [
